<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ventana3">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/design_default_color_secondary_variant"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/etiInscripcion"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="Registro Socio:"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiNombre" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiApellidos" />

    <TextView
        android:id="@+id/lblApellidos"
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiTelefono" />

    <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiEmail" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="match_parent"
        android:layout_height="31dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiSocio" />

    <TextView
        android:id="@+id/lblSocio"
        android:layout_width="match_parent"
        android:layout_height="31dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiMenor" />

    <TextView
        android:id="@+id/lblMenor"
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiResidencia" />

    <TextView
        android:id="@+id/lblResidencia"
        android:layout_width="match_parent"
        android:layout_height="35dp" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:onClick="closeWindow"
        android:text="@string/etiCerrar"
        app:backgroundTint="@android:color/darker_gray" />

</LinearLayout>